syntax = "proto3";

package echo;

service Test2 {
  rpc test2(Test2Request) returns (Test2Reply);
}

message Test2Request { }
message Test2Reply {
  string message = 1;
}